--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,9 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           cache: 'yarn'
+      - uses: bahmutov/npm-install@v1
+        with:
+          useRollingCache: true
       - name: Run tests
         run: yarn test
     
