--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,6 +74,6 @@ jobs:
         uses: cypress-io/github-action@v2
         with:
           install: false
-          start: yarn cypress:run
+          start: yarn start
           wait-on: 'http://localhost:3000'
 
