--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "multi-stage-caching",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "license": "UNLICENSED",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
