--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,4 +71,6 @@ jobs:
           install: false # no need to install because of the above 2
           start: yarn start
           wait-on: 'http://localhost:3000'
+        env:
+          CYPRESS_SECRET: ${{secrets.CYPRESS_SECRET}}
 
