--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,7 @@
   "exclude": [
     "node_modules",
     "dist",
-    "web/webpack.config.ts"
+    "web/webpack.config.ts",
+    "cypress/**"
   ]
 }
