--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
-{   "printWidth": 200 ,
-    "trailingComma": "none",
-    "tabWidth": 2,
-    "semi": false,
-    "singleQuote": true
-  }
+{
+  "printWidth": 100,
+  "trailingComma": "none",
+  "tabWidth": 2,
+  "semi": false,
+  "singleQuote": true
+}
