--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -3,7 +3,8 @@
     "target": "es5",
     "lib": ["es5", "dom"],
     "types": ["cypress"],
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "allowJs": true
   },
   "include": ["**/*.ts"]
 }
