--- a/package.json
+++ b/package.json
@@ -51,11 +51,14 @@
   "devDependencies": {
     "@cypress/react": "^5.10.3",
     "@cypress/webpack-dev-server": "^1.7.0",
+    "axios": "^0.24.0",
     "cross-env": "^7.0.3",
     "cypress": "^9.0.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.4.1",
-    "start-server-and-test": "^1.14.0"
+    "prop-types": "^15.7.2",
+    "start-server-and-test": "^1.14.0",
+    "styled-components": "^5.3.3"
   }
 }
