--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ yarn-debug.log*
 yarn-error.log*
 cypress/videos
 cypress/screenshots
+cypress/component/hooks/counter-set-state
+cypress/component/use-render
