--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ cypress/videos
 cypress/screenshots
 cypress/component/hooks/counter-set-state
 cypress/component/use-render
+cypress/component/other/emotion.comp-spec.jsx
+cypress/component/other/hello-pure.comp-spec.jsx
