at mocking imports

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ cypress/component/hooks/counter-set-state
 cypress/component/use-render
 cypress/component/other/emotion.comp-spec.jsx
 cypress/component/other/hello-pure.comp-spec.jsx
+cypress/component/network/axios-example-3-wrapped
