--- a/package.json
+++ b/package.json
@@ -55,13 +55,22 @@
   "devDependencies": {
     "@cypress/react": "^5.10.3",
     "@cypress/webpack-dev-server": "^1.7.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/pickers": "^3.3.10",
     "axios": "^0.24.0",
     "cross-env": "^7.0.3",
     "cypress": "9.0.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-prettier": "^4.0.0",
+    "i18next": "^21.5.3",
+    "mobx": "^6.3.7",
+    "mobx-react-lite": "^3.2.2",
     "prettier": "^2.4.1",
     "prop-types": "^15.7.2",
+    "react-google-maps": "^9.4.5",
+    "react-i18next": "^11.14.3",
     "start-server-and-test": "^1.14.0",
     "styled-components": "^5.3.3"
   }
