--- a/package.json
+++ b/package.json
@@ -68,7 +68,10 @@
     "mobx": "^6.3.7",
     "mobx-react-lite": "^3.2.2",
     "prettier": "^2.4.1",
+    "pretty": "^2.0.0",
     "prop-types": "^15.7.2",
+    "radioactive-state": "^1.4.0",
+    "react-bootstrap": "^2.0.2",
     "react-google-maps": "^9.4.5",
     "react-i18next": "^11.14.3",
     "start-server-and-test": "^1.14.0",
