--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-bootstrap": "^2.0.2",
     "react-google-maps": "^9.4.5",
     "react-i18next": "^11.14.3",
+    "react-router-dom": "^6.0.2",
     "start-server-and-test": "^1.14.0",
     "styled-components": "^5.3.3"
   }
