--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,7 @@ jobs:
   cypress-e2e-tests:
     needs: [unit-test, lint, typecheck]
     runs-on: ubuntu-latest
-    container: cypress/included:9.0.0 # save time on not having to install cypress
+    container: cypress/included:9.0.1 # save time on not having to install cypress
     steps:
       - uses: actions/checkout@v2
 
@@ -74,11 +74,16 @@ jobs:
           start: yarn start
           wait-on: 'http://localhost:3000'
           browser: chrome
+        env:
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
 
   cypress-component-tests:
+    strategy:
+      matrix:
+        machines: [1, 2, 3] # uses 2 CI machines to run tests in parallel
     needs: [unit-test, lint, typecheck]
     runs-on: ubuntu-latest
-    container: cypress/included:9.0.0 # save time on not having to install cypress
+    container: cypress/included:9.0.1 # save time on not having to install cypress
     steps:
       - uses: actions/checkout@v2
 
@@ -93,3 +98,5 @@ jobs:
           # to run component tests we need to use "cypress run-ct"
           command: yarn cypress run-ct
           browser: chrome
+        env:
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
