added component test dashboard command

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -99,7 +99,7 @@ jobs:
           # we have already installed everything
           install: false
           # to run component tests we need to use "cypress run-ct"
-          command: yarn cypress run-ct --record ${{ secrets.CYPRESS_RECORD_KEY }}
+          command: yarn cypress run-ct --record --key ${{ secrets.CYPRESS_RECORD_KEY }}
           browser: chrome
           # record: true # with component tests since we have a custom command, we pass the record with that command instead
           parallel: true # parallelizes tests
