turned off dashboard and parallelization - ran out

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -81,9 +81,9 @@ jobs:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
 
   cypress-component-tests:
-    strategy:
-      matrix:
-        machines: [1, 2, 3] # uses 2 CI machines to run tests in parallel
+    # strategy: # ran out of parallelization, turning it off
+    #   matrix:
+    #     machines: [1, 2, 3] # uses 2 CI machines to run tests in parallel
     needs: [unit-test, lint, typecheck]
     runs-on: ubuntu-latest
     container: cypress/included:9.0.0 # save time on not having to install cypress
@@ -99,8 +99,10 @@ jobs:
           # we have already installed everything
           install: false
           # to run component tests we need to use "cypress run-ct"
-          command: yarn cypress run-ct --record --key=${{ secrets.CYPRESS_RECORD_KEY }} --browser chrome --group component-tests --tag component-tests --parallel
           # with component tests since we have a custom command, we pass these parameters in the command instead
+          # command: yarn cypress run-ct --record --key=${{ secrets.CYPRESS_RECORD_KEY }} --browser chrome --group component-tests --tag component-tests --parallel
+          # ran out of parallelization, turning it off
+          command: yarn cypress run-ct --browser chrome
           # browser: chrome
           # record: true
           # parallel: true # parallelizes tests
