--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ cypress/component/other/emotion.comp-spec.jsx
 cypress/component/other/hello-pure.comp-spec.jsx
 cypress/component/network/axios-example-3-wrapped
 cypress/component/react-book-chris-noring/App.css
+cypress/component/react-book-chris-noring/chapters/6.conditional-rendering.comp-spec.jsx
