--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@types/react-dom": "17.0.11",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "4.0.3",
     "typescript": "4.5.4",
     "web-vitals": "2.1.3"
   },
@@ -63,6 +63,7 @@
     "axios": "0.24.0",
     "cross-env": "7.0.3",
     "cypress": "9.2.1",
+    "cypress-real-events": "^1.6.0",
     "eslint-plugin-cypress": "2.12.1",
     "eslint-plugin-prettier": "4.0.0",
     "i18next": "21.6.5",
