started hook examples

--- a/renovate.json
+++ b/renovate.json
@@ -6,5 +6,11 @@
   "timezone": "America/New_York",
   "schedule": ["after 10pm and before 5am on every weekday", "every weekend"],
   "masterIssue": true,
-  "labels": ["type: dependencies", "renovate"]
+  "labels": ["type: dependencies", "renovate"],
+  "packageRules": [
+    {
+      "packageNames": ["faker"],
+      "enabled": false
+    }
+  ]
 }
