--- a/package.json
+++ b/package.json
@@ -60,7 +60,6 @@
     "@material-ui/lab": "4.0.0-alpha.60",
     "@material-ui/pickers": "3.3.10",
     "@testing-library/cypress": "8.0.2",
-    "faker": "5.5.3",
     "@types/faker": "6.6.8",
     "axios": "0.25.0",
     "cross-env": "7.0.3",
@@ -68,6 +67,8 @@
     "cypress-real-events": "1.6.0",
     "eslint-plugin-cypress": "2.12.1",
     "eslint-plugin-prettier": "4.0.0",
+    "faker": "5.5.3",
+    "formik": "^2.2.9",
     "i18next": "21.6.6",
     "mobx": "6.3.12",
     "mobx-react-lite": "3.2.3",
