--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "react-i18next": "11.15.3",
     "react-router-dom": "6.2.1",
     "start-server-and-test": "1.14.0",
-    "styled-components": "5.3.3"
+    "styled-components": "5.3.3",
+    "yup": "^0.32.11"
   }
 }
