--- a/package.json
+++ b/package.json
@@ -11,11 +11,31 @@
     "@types/node": "12.20.47",
     "@types/react": "17.0.39",
     "@types/react-dom": "17.0.13",
+    "query-string": "^7.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "4.6.2",
-    "web-vitals": "2.1.4"
+    "web-vitals": "2.1.4",
+    "prop-types": "15.8.1",
+    "radioactive-state": "1.4.0",
+    "react-bootstrap": "2.2.0",
+    "react-google-maps": "9.4.5",
+    "react-i18next": "11.15.6",
+    "react-router-dom": "^6.2.2",
+    "start-server-and-test": "1.14.0",
+    "styled-components": "5.3.3",
+    "yup": "0.32.11",
+    "faker": "5.5.3",
+    "formik": "2.2.9",
+    "i18next": "21.6.13",
+    "mobx": "6.4.2",
+    "mobx-react-lite": "3.3.0",
+    "@material-ui/core": "4.12.3",
+    "@material-ui/icons": "4.11.2",
+    "@material-ui/lab": "4.0.0-alpha.60",
+    "@material-ui/pickers": "3.3.10",
+    "@types/faker": "6.6.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -55,33 +75,14 @@
   "devDependencies": {
     "@cypress/react": "5.12.4",
     "@cypress/webpack-dev-server": "1.8.2",
-    "@material-ui/core": "4.12.3",
-    "@material-ui/icons": "4.11.2",
-    "@material-ui/lab": "4.0.0-alpha.60",
-    "@material-ui/pickers": "3.3.10",
     "@testing-library/cypress": "8.0.2",
-    "@types/faker": "6.6.8",
     "axios": "0.26.0",
     "cross-env": "7.0.3",
     "cypress": "9.5.1",
     "cypress-real-events": "1.7.0",
     "eslint-plugin-cypress": "2.12.1",
     "eslint-plugin-prettier": "4.0.0",
-    "faker": "5.5.3",
-    "formik": "2.2.9",
-    "i18next": "21.6.13",
-    "mobx": "6.4.2",
-    "mobx-react-lite": "3.3.0",
     "prettier": "2.5.1",
-    "pretty": "2.0.0",
-    "prop-types": "15.8.1",
-    "radioactive-state": "1.4.0",
-    "react-bootstrap": "2.2.0",
-    "react-google-maps": "9.4.5",
-    "react-i18next": "11.15.6",
-    "react-router-dom": "6.2.2",
-    "start-server-and-test": "1.14.0",
-    "styled-components": "5.3.3",
-    "yup": "0.32.11"
+    "pretty": "2.0.0"
   }
 }
