--- a/package.json
+++ b/package.json
@@ -4,38 +4,38 @@
   "private": false,
   "license": "UNLICENSED",
   "dependencies": {
+    "@material-ui/core": "4.12.3",
+    "@material-ui/icons": "4.11.2",
+    "@material-ui/lab": "4.0.0-alpha.60",
+    "@material-ui/pickers": "3.3.10",
     "@testing-library/jest-dom": "5.16.2",
     "@testing-library/react": "12.1.4",
     "@testing-library/user-event": "13.5.0",
+    "@types/faker": "6.6.8",
     "@types/jest": "27.4.1",
     "@types/node": "12.20.47",
     "@types/react": "17.0.39",
     "@types/react-dom": "17.0.13",
-    "query-string": "^7.1.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-scripts": "4.0.3",
-    "typescript": "4.6.2",
-    "web-vitals": "2.1.4",
-    "prop-types": "15.8.1",
-    "radioactive-state": "1.4.0",
-    "react-bootstrap": "2.2.0",
-    "react-google-maps": "9.4.5",
-    "react-i18next": "11.15.6",
-    "react-router-dom": "^6.2.2",
-    "start-server-and-test": "1.14.0",
-    "styled-components": "5.3.3",
-    "yup": "0.32.11",
     "faker": "5.5.3",
     "formik": "2.2.9",
     "i18next": "21.6.13",
     "mobx": "6.4.2",
     "mobx-react-lite": "3.3.0",
-    "@material-ui/core": "4.12.3",
-    "@material-ui/icons": "4.11.2",
-    "@material-ui/lab": "4.0.0-alpha.60",
-    "@material-ui/pickers": "3.3.10",
-    "@types/faker": "6.6.8"
+    "prop-types": "15.8.1",
+    "query-string": "^7.1.1",
+    "radioactive-state": "1.4.0",
+    "react": "17.0.2",
+    "react-bootstrap": "2.2.0",
+    "react-dom": "17.0.2",
+    "react-google-maps": "9.4.5",
+    "react-i18next": "11.15.6",
+    "react-router-dom": "^6.2.2",
+    "react-scripts": "4.0.3",
+    "start-server-and-test": "1.14.0",
+    "styled-components": "5.3.3",
+    "typescript": "4.6.2",
+    "web-vitals": "2.1.4",
+    "yup": "0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -81,6 +81,7 @@
     "cross-env": "7.0.3",
     "cypress": "9.5.1",
     "cypress-real-events": "1.7.0",
+    "cypress-recurse": "^1.14.2",
     "eslint-plugin-cypress": "2.12.1",
     "eslint-plugin-prettier": "4.0.0",
     "prettier": "2.5.1",
