--- a/package.json
+++ b/package.json
@@ -85,6 +85,8 @@
     "eslint-plugin-cypress": "2.12.1",
     "eslint-plugin-prettier": "4.0.0",
     "prettier": "2.5.1",
-    "pretty": "2.0.0"
+    "pretty": "2.0.0",
+    "react-error-boundary": "^3.1.4",
+    "react-infinite-scroll-hook": "^4.0.2"
   }
 }
