--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -2,15 +2,18 @@
   "compilerOptions": {
     "target": "esnext",
     "lib": ["esnext", "dom"],
-    "types": ["cypress", "cypress-real-events"],
+    "types": [
+      "cypress",
+      "node",
+      "@testing-library/cypress",
+      "cypress-real-events"
+    ],
     "moduleResolution": "node",
     "esModuleInterop": true,
     "allowJs": true,
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
     "jsx": "react-jsx"
   },
-  "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    "component/hooks/react-infinite-scroll-hook/simple-example.js"
-  ]
+  "include": ["**/*.ts", "**/*.tsx"]
 }
