--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "axios": "0.26.1",
     "cross-env": "7.0.3",
     "cypress": "9.5.1",
+    "cypress-react-app-actions": "^1.0.2",
     "cypress-real-events": "1.7.0",
     "cypress-recurse": "^1.14.2",
     "eslint-plugin-cypress": "2.12.1",
