fixed type issues

--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -15,5 +15,5 @@
     "allowSyntheticDefaultImports": true,
     "jsx": "react-jsx"
   },
-  "include": ["**/*.ts", "**/*.tsx"]
+  "include": ["**/*.ts", "**/*.tsx", "**/*.cy.tsx"]
 }
