--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "12.20.47",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
+    "@xstate/react": "^2.0.1",
     "faker": "5.5.3",
     "formik": "2.2.9",
     "i18next": "21.6.13",
@@ -35,6 +36,7 @@
     "styled-components": "5.3.5",
     "typescript": "4.6.3",
     "web-vitals": "2.1.4",
+    "xstate": "^4.30.6",
     "yup": "0.32.11"
   },
   "scripts": {
