--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,6 +67,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      # issue https://github.com/muratkeremozcan/multi-stage-caching/runs/7092543067?check_suite_focus=true#step:4:63
+      - name: TEMPORARY act workaround
+        run: apt update && apt install zstd
+
       - uses: bahmutov/npm-install@v1.8.16 # save time on dependencies
         with: { useRollingCache: true }
 
@@ -93,6 +97,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      # issue https://github.com/muratkeremozcan/multi-stage-caching/runs/7092543067?check_suite_focus=true#step:4:63
+      - name: TEMPORARY act workaround
+        run: apt update && apt install zstd
+
       - uses: bahmutov/npm-install@v1.8.16 # save time on dependencies
         with: { useRollingCache: true }
 
@@ -106,7 +114,7 @@ jobs:
           # command: yarn cypress run-ct --record --key=${{ secrets.CYPRESS_RECORD_KEY }} --browser chrome --group component-tests --tag component-tests --parallel
           # ran out of parallelization, turning it off
           component: true,
-          browser: chrome
+          browser: chromeZ
           # record: true
           # parallel: true # parallelizes tests
           # group: component-tests
