--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           cache: 'yarn'
           node-version: 16.10.0
       - uses: bahmutov/npm-install@v1.8.16
-        with: { useRollingCache: true } # recommended for large projects
+        # with: { useRollingCache: true } # recommended for large projects
         env:
           CYPRESS_INSTALL_BINARY: 0 # no need to install the Cypress binary, we are already using the docker image in the e2e job
 
@@ -41,7 +41,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: bahmutov/npm-install@v1.8.16
-        with: { useRollingCache: true }
+        # with: { useRollingCache: true }
         env:
           CYPRESS_INSTALL_BINARY: 0
       - name: lint
@@ -54,7 +54,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: bahmutov/npm-install@v1.8.16
-        with: { useRollingCache: true }
+        # with: { useRollingCache: true }
         env:
           CYPRESS_INSTALL_BINARY: 0
       - name: typecheck
@@ -72,7 +72,7 @@ jobs:
         run: apt update && apt install zstd
 
       - uses: bahmutov/npm-install@v1.8.16 # save time on dependencies
-        with: { useRollingCache: true }
+        # with: { useRollingCache: true }
 
       - name: Cypress e2e tests 🧪
         uses: cypress-io/github-action@v4.1.1
@@ -102,7 +102,7 @@ jobs:
         run: apt update && apt install zstd
 
       - uses: bahmutov/npm-install@v1.8.16 # save time on dependencies
-        with: { useRollingCache: true }
+        # with: { useRollingCache: true }
 
       - name: Cypress component tests 🧪
         uses: cypress-io/github-action@v4.1.1
