--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,10 +14,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
-        with:
-          cache: 'yarn'
-          node-version: 16.10.0
+        # issue https://github.com/muratkeremozcan/multi-stage-caching/runs/7092543067?check_suite_focus=true#step:4:63
+        # with:
+        #   cache: 'yarn'
+        #   node-version: 16.10.0
       - uses: bahmutov/npm-install@v1.8.16
+        # issue https://github.com/muratkeremozcan/multi-stage-caching/runs/7092543067?check_suite_focus=true#step:4:63
         # with: { useRollingCache: true } # recommended for large projects
         env:
           CYPRESS_INSTALL_BINARY: 0 # no need to install the Cypress binary, we are already using the docker image in the e2e job
@@ -68,7 +70,7 @@ jobs:
       - uses: actions/checkout@v3
 
       # issue https://github.com/muratkeremozcan/multi-stage-caching/runs/7092543067?check_suite_focus=true#step:4:63
-      - name: TEMPORARY act workaround
+      - name: TEMPORARY zstd workaround
         run: apt update && apt install zstd
 
       - uses: bahmutov/npm-install@v1.8.16 # save time on dependencies
@@ -98,7 +100,7 @@ jobs:
       - uses: actions/checkout@v3
 
       # issue https://github.com/muratkeremozcan/multi-stage-caching/runs/7092543067?check_suite_focus=true#step:4:63
-      - name: TEMPORARY act workaround
+      - name: TEMPORARY zstd workaround
         run: apt update && apt install zstd
 
       - uses: bahmutov/npm-install@v1.8.16 # save time on dependencies
