--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,13 +14,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
-        # issue https://github.com/muratkeremozcan/multi-stage-caching/runs/7092543067?check_suite_focus=true#step:4:63
-        # with:
-        #   cache: 'yarn'
-        #   node-version: 16.10.0
-      - uses: bahmutov/npm-install@v1.8.16
-        # issue https://github.com/muratkeremozcan/multi-stage-caching/runs/7092543067?check_suite_focus=true#step:4:63
-        # with: { useRollingCache: true } # recommended for large projects
+        with:
+          cache: 'yarn'
+          node-version: 16.10.0
+      - uses: bahmutov/npm-install@v1.8.15
+        with: { useRollingCache: true } # recommended for large projects
         env:
           CYPRESS_INSTALL_BINARY: 0 # no need to install the Cypress binary, we are already using the docker image in the e2e job
 
@@ -30,7 +28,7 @@ jobs:
   #   runs-on: ubuntu-latest
   #   steps:
   #     - uses: actions/checkout@v3
-  #     - uses: bahmutov/npm-install@v1.8.16
+  #     - uses: bahmutov/npm-install@v1.8.15
   #       with:
   #         useRollingCache: true
   #     - name: Run tests
@@ -42,8 +40,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: bahmutov/npm-install@v1.8.16
-        # with: { useRollingCache: true }
+      - uses: bahmutov/npm-install@v1.8.15
+        with: { useRollingCache: true }
         env:
           CYPRESS_INSTALL_BINARY: 0
       - name: lint
@@ -55,8 +53,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: bahmutov/npm-install@v1.8.16
-        # with: { useRollingCache: true }
+      - uses: bahmutov/npm-install@v1.8.15
+        with: { useRollingCache: true }
         env:
           CYPRESS_INSTALL_BINARY: 0
       - name: typecheck
@@ -69,12 +67,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      # issue https://github.com/muratkeremozcan/multi-stage-caching/runs/7092543067?check_suite_focus=true#step:4:63
-      - name: TEMPORARY zstd workaround
-        run: apt update && apt install zstd
-
-      - uses: bahmutov/npm-install@v1.8.16 # save time on dependencies
-        # with: { useRollingCache: true }
+      - uses: bahmutov/npm-install@v1.8.15 # save time on dependencies
+        with: { useRollingCache: true }
 
       - name: Cypress e2e tests 🧪
         uses: cypress-io/github-action@v4.1.1
@@ -99,12 +93,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      # issue https://github.com/muratkeremozcan/multi-stage-caching/runs/7092543067?check_suite_focus=true#step:4:63
-      - name: TEMPORARY zstd workaround
-        run: apt update && apt install zstd
-
-      - uses: bahmutov/npm-install@v1.8.16 # save time on dependencies
-        # with: { useRollingCache: true }
+      - uses: bahmutov/npm-install@v1.8.15 # save time on dependencies
+        with: { useRollingCache: true }
 
       - name: Cypress component tests 🧪
         uses: cypress-io/github-action@v4.1.1
@@ -116,7 +106,7 @@ jobs:
           # command: yarn cypress run-ct --record --key=${{ secrets.CYPRESS_RECORD_KEY }} --browser chrome --group component-tests --tag component-tests --parallel
           # ran out of parallelization, turning it off
           component: true,
-          browser: chromeZ
+          browser: chrome
           # record: true
           # parallel: true # parallelizes tests
           # group: component-tests
