--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "multi-stage-caching",
+  "name": "cypress-react-component-test-examples",
   "version": "0.1.0",
   "private": false,
   "license": "UNLICENSED",
