--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cypress-react-component-test-examples",
+  "name": "multi-stage-caching",
   "version": "0.1.0",
   "private": false,
   "license": "UNLICENSED",
@@ -8,19 +8,10 @@
     "@material-ui/icons": "4.11.3",
     "@material-ui/lab": "4.0.0-alpha.61",
     "@material-ui/pickers": "3.3.10",
-    "@testing-library/jest-dom": "5.16.4",
-    "@testing-library/react": "13.2.0",
-    "@testing-library/user-event": "14.1.1",
-    "@types/faker": "6.6.8",
-    "@types/jest": "27.5.0",
-    "@types/node": "12.20.50",
-    "@types/react": "17.0.45",
-    "@types/react-dom": "18.0.3",
     "@xstate/react": "3.0.0",
-    "faker": "5.5.3",
     "formik": "2.2.9",
-    "i18next": "21.8.0",
-    "mobx": "6.5.0",
+    "i18next": "21.8.11",
+    "mobx": "6.6.1",
     "mobx-react-lite": "3.4.0",
     "prop-types": "15.8.1",
     "query-string": "^7.1.1",
@@ -29,14 +20,13 @@
     "react-bootstrap": "2.3.1",
     "react-dom": "17.0.2",
     "react-google-maps": "9.4.5",
-    "react-i18next": "11.16.9",
+    "react-i18next": "11.17.3",
     "react-router-dom": "6.3.0",
     "react-scripts": "4.0.3",
-    "start-server-and-test": "1.14.0",
     "styled-components": "5.3.5",
     "typescript": "4.6.4",
     "web-vitals": "2.1.4",
-    "xstate": "4.32.0",
+    "xstate": "4.32.1",
     "yup": "0.32.11"
   },
   "scripts": {
@@ -49,8 +39,7 @@
     "cy:open": "cypress open --e2e --browser chrome",
     "cy:run": "cypress run --e2e --browser chrome",
     "cy:open-ct": "cypress open --component --browser chrome",
-    "cy:run-ct": "cypress run --component --browser chrome",
-    "server:test": "server-test 3000 cy:run"
+    "cy:run-ct": "cypress run --component --browser chrome"
   },
   "eslintConfig": {
     "extends": [
@@ -75,7 +64,6 @@
     ]
   },
   "devDependencies": {
-    "@cypress/webpack-dev-server": "1.8.4",
     "@testing-library/cypress": "8.0.3",
     "@types/faker": "6.6.8",
     "axios": "0.27.2",
@@ -85,11 +73,19 @@
     "cypress-real-events": "1.7.1",
     "cypress-recurse": "1.20.0",
     "eslint-plugin-cypress": "2.12.1",
-    "eslint-plugin-prettier": "4.0.0",
-    "prettier": "2.6.2",
+    "eslint-plugin-prettier": "4.1.0",
+    "prettier": "2.7.1",
     "pretty": "2.0.0",
-    "react-error-boundary": "^3.1.4",
+    "react-error-boundary": "3.1.4",
     "react-infinite-scroll-hook": "4.0.3",
-    "react-use-keypress": "1.3.1"
+    "react-use-keypress": "1.3.1",
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "13.3.0",
+    "@testing-library/user-event": "14.2.1",
+    "@types/jest": "28.1.3",
+    "@types/node": "12.20.50",
+    "@types/react": "17.0.45",
+    "@types/react-dom": "18.0.5",
+    "faker": "5.5.3"
   }
 }
