--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "react-error-boundary": "^3.1.4",
     "react-infinite-scroll-hook": "4.0.3",
     "react-use-keypress": "1.3.1",
-    "vanilla-tilt": "^1.7.2"
+    "vanilla-tilt": "^1.7.2",
+    "warning": "^4.0.3"
   }
 }
