--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "pretty": "2.0.0",
     "react-error-boundary": "^3.1.4",
     "react-infinite-scroll-hook": "4.0.3",
+    "react-use-geolocation": "^0.1.1",
     "react-use-keypress": "1.3.1",
     "recoil": "^0.7.4",
     "use-interval": "^1.4.0",
