--- a/package.json
+++ b/package.json
@@ -80,7 +80,9 @@
     "@types/faker": "6.6.8",
     "axios": "0.27.2",
     "cross-env": "7.0.3",
+    "cy-spok": "^1.5.2",
     "cypress": "10.3.0",
+    "cypress-axe": "^1.0.0",
     "cypress-react-app-actions": "^1.0.2",
     "cypress-real-events": "1.7.1",
     "cypress-recurse": "1.20.0",
