--- a/package.json
+++ b/package.json
@@ -92,9 +92,12 @@
     "pretty": "2.0.0",
     "react-error-boundary": "^3.1.4",
     "react-infinite-scroll-hook": "4.0.3",
+    "react-redux": "^8.0.2",
+    "react-transition-group": "^4.4.2",
     "react-use-geolocation": "^0.1.1",
     "react-use-keypress": "1.3.1",
     "recoil": "^0.7.4",
+    "redux": "^4.2.0",
     "use-interval": "^1.4.0",
     "vanilla-tilt": "^1.7.2",
     "warning": "^4.0.3"
