--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@testing-library/cypress": "8.0.3",
     "@types/faker": "6.6.8",
     "axios": "0.27.2",
+    "copy-to-clipboard": "^3.3.1",
     "cross-env": "7.0.3",
     "cy-spok": "^1.5.2",
     "cypress": "10.3.0",
@@ -88,6 +89,7 @@
     "cypress-recurse": "1.20.0",
     "eslint-plugin-cypress": "2.12.1",
     "eslint-plugin-prettier": "4.0.0",
+    "js-cookie": "^3.0.1",
     "prettier": "2.7.1",
     "pretty": "2.0.0",
     "react-error-boundary": "^3.1.4",
