--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           cache: 'yarn'
           node-version: 16.10.0
-      - uses: bahmutov/npm-install@v1.8.19
+      - uses: bahmutov/npm-install@v1.8.20
         with: { useRollingCache: true } # recommended for large projects
         env:
           CYPRESS_INSTALL_BINARY: 0 # no need to install the Cypress binary, we are already using the docker image in the e2e job
@@ -40,7 +40,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: bahmutov/npm-install@v1.8.19
+      - uses: bahmutov/npm-install@v1.8.20
         with: { useRollingCache: true }
         env:
           CYPRESS_INSTALL_BINARY: 0
@@ -53,7 +53,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: bahmutov/npm-install@v1.8.19
+      - uses: bahmutov/npm-install@v1.8.20
         with: { useRollingCache: true }
         env:
           CYPRESS_INSTALL_BINARY: 0
@@ -67,7 +67,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - uses: bahmutov/npm-install@v1.8.19 # save time on dependencies
+      - uses: bahmutov/npm-install@v1.8.20 # save time on dependencies
         with: { useRollingCache: true }
 
       - name: Cypress e2e tests 🧪
@@ -84,16 +84,16 @@ jobs:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
 
   cypress-component-tests:
-    # strategy: # ran out of parallelization, turning it off
-    #   matrix:
-    #     machines: [1, 2, 3] # uses 2 CI machines to run tests in parallel
+    strategy:
+      matrix:
+        machines: [1, 2, 3, 4]
     needs: [install-dependencies]
     runs-on: ubuntu-latest
     container: cypress/included:10.4.0 # save time on not having to install cypress
     steps:
       - uses: actions/checkout@v3
 
-      - uses: bahmutov/npm-install@v1.8.19 # save time on dependencies
+      - uses: bahmutov/npm-install@v1.8.20 # save time on dependencies
         with: { useRollingCache: true }
 
       - name: Cypress component tests 🧪
@@ -101,15 +101,11 @@ jobs:
         with:
           # we have already installed everything
           install: false
-          # to run component tests we need to use "cypress run-ct"
-          # with component tests since we have a custom command, we pass these parameters in the command instead
-          # command: yarn cypress run-ct --record --key=${{ secrets.CYPRESS_RECORD_KEY }} --browser chrome --group component-tests --tag component-tests --parallel
-          # ran out of parallelization, turning it off
           component: true
           browser: chrome
-          # record: true
-          # parallel: true # parallelizes tests
-          # group: component-tests
-          # tag: component-test
-        # env:
-        # CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          record: true
+          parallel: true # parallelizes tests
+          group: component-tests
+          tag: component-test
+        env:
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
