--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "4.11.3",
     "@material-ui/lab": "4.0.0-alpha.61",
     "@material-ui/pickers": "3.3.10",
+    "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.2.0",
     "@testing-library/user-event": "14.4.3",
@@ -77,6 +78,8 @@
   "devDependencies": {
     "@testing-library/cypress": "8.0.3",
     "@types/faker": "6.6.8",
+    "@types/redux-actions": "^2.6.2",
+    "@types/redux-thunk": "^2.1.0",
     "axios": "0.27.2",
     "copy-to-clipboard": "3.3.2",
     "cross-env": "7.0.3",
@@ -99,6 +102,7 @@
     "react-use-keypress": "1.3.1",
     "recoil": "0.7.5",
     "redux": "4.2.0",
+    "redux-actions": "^2.6.5",
     "use-interval": "1.4.0",
     "vanilla-tilt": "1.7.2",
     "warning": "4.0.3"
