ch 15 [ci skip]

--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "cy-spok": "1.5.2",
     "cypress": "10.9.0",
     "cypress-axe": "1.0.0",
+    "cypress-each": "^1.11.0",
     "cypress-react-app-actions": "1.0.2",
     "cypress-real-events": "1.7.1",
     "cypress-recurse": "1.23.0",
@@ -106,6 +107,7 @@
     "recoil": "0.7.5",
     "redux": "4.2.0",
     "redux-actions": "^2.6.5",
+    "redux-devtools-extension": "^2.13.9",
     "thunkify": "^2.1.2",
     "use-interval": "1.4.0",
     "uuid": "^9.0.0",
