used sass instead of node-sass [ci-skip]

--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "i18next": "22.0.4",
     "mobx": "6.6.2",
     "mobx-react-lite": "3.4.0",
-    "node-sass": "8.0.0",
     "prop-types": "15.8.1",
     "query-string": "7.1.1",
     "radioactive-state": "1.4.0",
@@ -34,6 +33,7 @@
     "react-i18next": "12.0.0",
     "react-router-dom": "6.4.3",
     "react-scripts": "4.0.3",
+    "sass": "^1.56.1",
     "start-server-and-test": "1.14.0",
     "styled-components": "5.3.6",
     "typescript": "4.8.4",
