--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": false,
   "license": "UNLICENSED",
   "dependencies": {
+    "@emotion/styled": "^11.10.5",
+    "@emotion/react": "^11.10.5",
     "@material-ui/core": "4.12.4",
     "@material-ui/icons": "4.11.3",
     "@material-ui/lab": "4.0.0-alpha.61",
