make window.location.replace work in a component test

--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -10,5 +10,5 @@
     "allowSyntheticDefaultImports": true,
     "jsx": "react-jsx"
   },
-  "include": ["**/*.ts", "**/*.tsx", "**/*.cy.tsx", "component/okta-login/okta.tsx"]
+  "include": ["**/*.ts", "**/*.tsx", "**/*.cy.tsx", "component/redirect/okta.tsx"]
 }
