--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": false,
   "license": "UNLICENSED",
   "dependencies": {
-    "@emotion/styled": "^11.10.5",
     "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@material-ui/core": "4.12.4",
     "@material-ui/icons": "4.11.3",
     "@material-ui/lab": "4.0.0-alpha.61",
@@ -89,16 +89,20 @@
     "copy-to-clipboard": "3.3.3",
     "cross-env": "7.0.3",
     "cy-spok": "1.6.1",
-    "cypress": "12.9.0",
+    "cypress": "12.11.0",
     "cypress-axe": "1.4.0",
     "cypress-each": "1.13.1",
+    "cypress-map": "^1.19.1",
     "cypress-react-app-actions": "1.0.2",
     "cypress-real-events": "1.7.6",
     "cypress-recurse": "1.29.0",
     "eslint-plugin-cypress": "2.12.1",
     "eslint-plugin-prettier": "4.0.0",
+    "jotai": "^2.0.4",
+    "jotai-optics": "^0.3.0",
     "js-cookie": "3.0.1",
     "lodash": "4.17.21",
+    "optics-ts": "^2.4.0",
     "prettier": "2.8.7",
     "pretty": "2.0.0",
     "ramda": "0.28.0",
@@ -112,6 +116,7 @@
     "redux": "4.2.1",
     "redux-actions": "2.6.5",
     "redux-devtools-extension": "2.13.9",
+    "rxjs": "^7.8.1",
     "thunkify": "2.1.2",
     "use-interval": "1.4.0",
     "uuid": "9.0.0",
