--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,12 @@
     "jsx": "react-jsx",
     "baseUrl": ".",
     "rootDir": ".",
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "plugins": [
+      {
+        "name": "typescript-plugin-css-modules"
+      }
+    ]
   },
   "types": ["cypress", "node", "@testing-library/cypress", "cypress-real-events", "cypress-map"],
   "include": ["**/*.ts", "**/*.tsx"],
