--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "copy-to-clipboard": "3.3.3",
     "cross-env": "7.0.3",
     "cy-spok": "1.6.2",
-    "cypress": "12.17.2",
+    "cypress": "https://cdn.cypress.io/beta/npm/13.0.0/linux-x64/release/13.0.0-5d1e07a7aa228745b5e742aa3e912fcbd4cb217f/cypress.tgz",
     "cypress-axe": "1.4.0",
     "cypress-each": "1.13.3",
     "cypress-map": "^1.19.1",
