--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -99,10 +99,10 @@ jobs:
 
   cypress-ct-test:
     # if you want to enable parallelization
-    strategy:
-      fail-fast: false
-      matrix:
-        machines: [1, 2, 3, 4, 5, 6]
+    # strategy:
+    #   fail-fast: false
+    #   matrix:
+    #     machines: [1, 2, 3, 4, 5, 6]
     needs: [install-dependencies]
     runs-on: ubuntu-latest
     steps:
