--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "sass": "^1.56.1",
     "start-server-and-test": "2.0.0",
     "styled-components": "6.0.7",
-    "typescript": "5.2.2",
+    "typescript": "5.1.6",
     "web-vitals": "3.4.0",
     "xstate": "4.38.2",
     "yup": "1.2.0"
@@ -89,8 +89,8 @@
     "copy-to-clipboard": "3.3.3",
     "cross-env": "7.0.3",
     "cy-spok": "1.6.2",
-    "cypress": "https://cdn.cypress.io/beta/npm/13.0.0/linux-x64/release/13.0.0-5d1e07a7aa228745b5e742aa3e912fcbd4cb217f/cypress.tgz",
-    "cypress-axe": "1.5.0",
+    "cypress": "12.17.4",
+    "cypress-axe": "1.4.0",
     "cypress-each": "1.13.3",
     "cypress-map": "^1.19.1",
     "cypress-react-app-actions": "1.0.2",
